--- a/test.ipynb
+++ b/test.ipynb
@@ -404,38 +404,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1189807/1195864096.py:15: DtypeWarning: Columns (2,3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  self.data = pd.read_csv(txt_path)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Warning: Error reading file de_111888311_20120607205223_20120608195341.hd5. Error: Unable to open file (unable to open file: name = '/home/ubuntu/data/ECG/2019/de_111888311_20120607205223_20120608195341.hd5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)\n",
       "Using CUDA.\n",
-      "{'ecg': tensor([[-175., -175., -175.,  ..., -102.,  -82.,  -92.],\n",
-      "        [  -9.,   -9.,    4.,  ...,   78.,   82.,   78.],\n",
-      "        [ 165.,  165.,  180.,  ...,  180.,  165.,  170.],\n",
-      "        ...,\n",
-      "        [  78.,   78.,   92.,  ...,  129.,  124.,  124.],\n",
-      "        [-170., -170., -178.,  ..., -141., -124., -131.],\n",
-      "        [  92.,   92.,   85.,  ...,   12.,    0.,    7.]]), 'txt': 'SINUS TACHYCARDIA|SEPTAL INFARCT||ST &|ABNORMAL ECG|WHEN COMPARED WITH ECG OF||SEPTAL INFARCT|IS NOW|PRESENT|T WAVE INVERSION NO LONGER EVIDENT IN|ANTERIOR LEADS'}\n",
-      "<torch.utils.data.dataloader.DataLoader object at 0x7fddc174ec40> cuda:0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1189807/1195864096.py:15: DtypeWarning: Columns (2,3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  self.data = pd.read_csv(txt_path)\n"
+      "None\n",
+      "<torch.utils.data.dataloader.DataLoader object at 0x7f74d05c9580> cuda:0\n"
      ]
     }
    ],
@@ -515,21 +494,25 @@
     "        row = self.data.iloc[idx]\n",
     "        hash_file_name = row['HashFileName']\n",
     "        diagnosis = row['deid_t_diagnosis_original']\n",
-    "        hd5_file = h5py.File(f\"{self.ecg_path}/{hash_file_name}\", \"r\")\n",
-    "        \n",
-    "        # Load the corresponding hd5 file for ECG data\n",
-    "        for k in list(hd5_file['ecg'].keys()):\n",
-    "            ecg_data_list = [torch.tensor(hd5_file['ecg'][k][lead][:]) for lead in self.leads]\n",
-    "            ecg_data = torch.stack(ecg_data_list, dim=0)\n",
-    "            sample_rate = float(hd5_file['ecg'][k]['ecgsamplebase_pc'][()])\n",
-    "        \n",
-    "    \n",
-    "        ecg_data = np.array(ecg_data, dtype=np.float64)\n",
-    "        ecg_data = self.preprocess(ecg_data, sample_rate)\n",
-    "        ecg_data = torch.tensor(ecg_data, dtype=torch.float)\n",
+    "        try:\n",
+    "          with h5py.File(f\"{self.ecg_path}/{hash_file_name}\", \"r\") as hd5_file:\n",
+    "              # Load the corresponding hd5 file for ECG data\n",
+    "              for k in list(hd5_file['ecg'].keys()):\n",
+    "                  ecg_data_list = [torch.tensor(hd5_file['ecg'][k][lead][:]) for lead in self.leads]\n",
+    "                  ecg_data = torch.stack(ecg_data_list, dim=0)\n",
+    "                  sample_rate = float(hd5_file['ecg'][k]['ecgsamplebase_pc'][()])\n",
     "\n",
-    "        sample = {'ecg': ecg_data, 'txt': diagnosis }\n",
-    "        return sample\n",
+    "              ecg_data = np.array(ecg_data, dtype=np.float64)\n",
+    "              ecg_data = self.preprocess(ecg_data, sample_rate)\n",
+    "              ecg_data = torch.tensor(ecg_data, dtype=torch.float)\n",
+    "\n",
+    "              sample = {'ecg': ecg_data, 'txt': diagnosis }\n",
+    "              return sample\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            # Handle the error gracefully here, e.g., print a warning and return a default value or skip.\n",
+    "            print(f\"Warning: Error reading file {hash_file_name}. Error: {e}\")\n",
+    "            return None  # or you can return a default value or skip this sample\n",
     "\n",
     "def load_data(ecg_path, txt_path, batch_size=128, column='deid_t_diagnosis_original'): \n",
     "    if torch.cuda.is_available():  \n",
@@ -552,8 +535,8 @@
     "    return data_loader, device\n",
     "    \n",
     "# Testing the dataset with the provided files\n",
-    "cxr_filepath = '/home/ubuntu/data'\n",
-    "txt_filepath = '/home/ubuntu/data/sample.csv'\n",
+    "cxr_filepath = '/home/ubuntu/data/ECG/2019'\n",
+    "txt_filepath = '/home/ubuntu/data/ECG/combined_ecg_diagnosis.csv'\n",
     "dataset = ECGDataset(txt_filepath, cxr_filepath)\n",
     "sample = dataset[0]\n",
     "ECGdataloader,dev = load_data(txt_path = txt_filepath, ecg_path = cxr_filepath)\n",
@@ -592,6 +575,99 @@
     "    plt.show()\n",
     "\n",
     "plot_ecg_data(sample_ecg, dataset.leads)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10356377"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "import h5py\n",
+    "import matplotlib.pyplot as plt\n",
+    "from typing import List, Tuple\n",
+    "\n",
+    "import torch\n",
+    "from torch.utils import data\n",
+    "from tqdm.notebook import tqdm\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "import sklearn\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, auc, roc_auc_score, roc_curve, classification_report\n",
+    "from sklearn.metrics import precision_recall_curve, f1_score\n",
+    "from sklearn.metrics import average_precision_score\n",
+    "\n",
+    "\n",
+    "class ECGDataset(Dataset):\n",
+    "    def __init__(self, data_path, label_path):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            data_path (string): 路径到心电图数据的 .npy 文件。\n",
+    "            label_path (string): 路径到标签数据的 .npy 文件。\n",
+    "        \"\"\"\n",
+    "        self.data = np.load(data_path)\n",
+    "        self.labels = np.load(label_path).squeeze()\n",
+    "\n",
+    "        assert self.data.shape[0] == self.labels.shape[0], \\\n",
+    "            \"Data and labels must have the same number of samples!\"\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.data.shape[0]\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        ecg = torch.tensor(self.data[idx], dtype=torch.float32) * 200\n",
+    "        label = torch.tensor(self.labels[idx], dtype=torch.long)\n",
+    "        \n",
+    "        sample = {'ecg': ecg, 'label':label}\n",
+    "        return sample\n",
+    "\n",
+    "dataset = ECGDataset(data_path=\"/home/ubuntu/code/ECG2TEXT/X_all.npy\", label_path=\"/home/ubuntu/code/ECG2TEXT/y_test.npy\")\n",
+    "sample = dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21396"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset)"
    ]
   },
   {
