--- a/read_hd5.ipynb
+++ b/read_hd5.ipynb
@@ -135,6 +135,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ubuntu/data/ECG/combined_ecg_diagnosis.csv'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "def process_and_combine_excel_files(directory_path):\n",
+    "    # List all files in the directory\n",
+    "    all_files = os.listdir(directory_path)\n",
+    "    excel_files = [f for f in all_files if f.endswith('.xlsx') or f.endswith('.xls')]\n",
+    "\n",
+    "    # Read and process each excel file\n",
+    "    dataframes = []\n",
+    "    for file in excel_files:\n",
+    "        file_path = os.path.join(directory_path, file)\n",
+    "        df = pd.read_excel(file_path)\n",
+    "        # Replace \"|\" with a space\n",
+    "        df['deid_t_diagnosis_original'] = df['deid_t_diagnosis_original'].str.replace('|', ' ')\n",
+    "        dataframes.append(df)\n",
+    "\n",
+    "    # Combine all dataframes\n",
+    "    combined_df = pd.concat(dataframes, ignore_index=True)\n",
+    "    \n",
+    "    # Save combined dataframe to a CSV\n",
+    "    combined_csv_path = os.path.join(directory_path, 'combined_ecg_diagnosis.csv')\n",
+    "    combined_df.to_csv(combined_csv_path, index=False)\n",
+    "    \n",
+    "    return combined_csv_path\n",
+    "\n",
+    "combined_file_path = \"/home/ubuntu/data/ECG/\"\n",
+    "process_and_combine_excel_files(combined_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "def filter_csv_based_on_files(csv_path, folder_path):\n",
+    "    # 读取CSV文件\n",
+    "    df = pd.read_csv(csv_path)\n",
+    "    \n",
+    "    # 去除NaN值\n",
+    "    df = df.dropna(subset=['HashFileName'])\n",
+    "    \n",
+    "    # 检查每个'HashFileName'是否在文件夹中存在\n",
+    "    df = df[df['HashFileName'].apply(lambda x: os.path.exists(os.path.join(folder_path, x)))]\n",
+    "    \n",
+    "    # 保存经过处理的CSV文件\n",
+    "    output_path = os.path.join(os.path.dirname(csv_path), \"filtered_\" + os.path.basename(csv_path))\n",
+    "    df.to_csv(output_path, index=False)\n",
+    "    \n",
+    "    return output_path\n",
+    "\n",
+    "# 使用方法：\n",
+    "output_file = filter_csv_based_on_files('/home/ubuntu/data/ECG/combined_ecg_diagnosis.csv', '/home/ubuntu/data/ECG/2019/02/')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
