train all data,in other AWS

--- a/read_hd5.ipynb
+++ b/read_hd5.ipynb
@@ -135,6 +135,231 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ubuntu/data/combined_ecg_diagnosis.csv'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "def process_and_combine_excel_files(directory_path):\n",
+    "    # List all files in the directory\n",
+    "    all_files = os.listdir(directory_path)\n",
+    "    excel_files = [f for f in all_files if f.endswith('.xlsx') or f.endswith('.xls')]\n",
+    "\n",
+    "    # Read and process each excel file\n",
+    "    dataframes = []\n",
+    "    for file in excel_files:\n",
+    "        file_path = os.path.join(directory_path, file)\n",
+    "        df = pd.read_excel(file_path)\n",
+    "        # Replace \"|\" with a space\n",
+    "        df['deid_t_diagnosis_original'] = df['deid_t_diagnosis_original'].str.replace('|', ' ')\n",
+    "        dataframes.append(df)\n",
+    "\n",
+    "    # Combine all dataframes\n",
+    "    combined_df = pd.concat(dataframes, ignore_index=True)\n",
+    "    \n",
+    "    # Save combined dataframe to a CSV\n",
+    "    combined_csv_path = os.path.join(directory_path, 'combined_ecg_diagnosis.csv')\n",
+    "    combined_df.to_csv(combined_csv_path, index=False)\n",
+    "    \n",
+    "    return combined_csv_path\n",
+    "\n",
+    "combined_file_path = \"/home/ubuntu/data/\"\n",
+    "process_and_combine_excel_files(combined_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>bdsp_id</th>\n",
+       "      <th>HashFileName</th>\n",
+       "      <th>deid_t_diagnosis</th>\n",
+       "      <th>deid_t_diagnosis_original</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>111888311</td>\n",
+       "      <td>de_111888311_20120607205223_20120608195341.hd5</td>\n",
+       "      <td>NORMAL SINUS RHYTHM|NORMAL ECG|WHEN COMPARED W...</td>\n",
+       "      <td>NORMAL SINUS RHYTHM NORMAL ECG WHEN COMPARED W...</td>\n",
+       "      <td>[0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>114308535</td>\n",
+       "      <td>de_114308535_20120701090717_20120703143853.hd5</td>\n",
+       "      <td>SINUS RHYTHM|WITH FREQUENT|PREMATURE VENTRICUL...</td>\n",
+       "      <td>SINUS RHYTHM WITH FREQUENT PREMATURE VENTRICUL...</td>\n",
+       "      <td>[0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>115828429</td>\n",
+       "      <td>de_115828429_20111219012630_20111219114122.hd5</td>\n",
+       "      <td>NORMAL SINUS RHYTHM|NORMAL ECG|WHEN COMPARED W...</td>\n",
+       "      <td>NORMAL SINUS RHYTHM NORMAL ECG WHEN COMPARED W...</td>\n",
+       "      <td>[0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>120680337</td>\n",
+       "      <td>de_120680337_20110601084937_20110601204411.hd5</td>\n",
+       "      <td>NORMAL SINUS RHYTHM|NONSPECIFIC T WAVE ABNORMA...</td>\n",
+       "      <td>NORMAL SINUS RHYTHM NONSPECIFIC T WAVE ABNORMA...</td>\n",
+       "      <td>[1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>119019508</td>\n",
+       "      <td>de_119019508_20120214153908_20120215103635.hd5</td>\n",
+       "      <td>NORMAL SINUS RHYTHM|LEFT AXIS DEVIATION|ABNORM...</td>\n",
+       "      <td>NORMAL SINUS RHYTHM LEFT AXIS DEVIATION ABNORM...</td>\n",
+       "      <td>[1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0    bdsp_id                                    HashFileName  \\\n",
+       "0           0  111888311  de_111888311_20120607205223_20120608195341.hd5   \n",
+       "1           1  114308535  de_114308535_20120701090717_20120703143853.hd5   \n",
+       "2           2  115828429  de_115828429_20111219012630_20111219114122.hd5   \n",
+       "3           3  120680337  de_120680337_20110601084937_20110601204411.hd5   \n",
+       "4           4  119019508  de_119019508_20120214153908_20120215103635.hd5   \n",
+       "\n",
+       "                                    deid_t_diagnosis  \\\n",
+       "0  NORMAL SINUS RHYTHM|NORMAL ECG|WHEN COMPARED W...   \n",
+       "1  SINUS RHYTHM|WITH FREQUENT|PREMATURE VENTRICUL...   \n",
+       "2  NORMAL SINUS RHYTHM|NORMAL ECG|WHEN COMPARED W...   \n",
+       "3  NORMAL SINUS RHYTHM|NONSPECIFIC T WAVE ABNORMA...   \n",
+       "4  NORMAL SINUS RHYTHM|LEFT AXIS DEVIATION|ABNORM...   \n",
+       "\n",
+       "                           deid_t_diagnosis_original  \\\n",
+       "0  NORMAL SINUS RHYTHM NORMAL ECG WHEN COMPARED W...   \n",
+       "1  SINUS RHYTHM WITH FREQUENT PREMATURE VENTRICUL...   \n",
+       "2  NORMAL SINUS RHYTHM NORMAL ECG WHEN COMPARED W...   \n",
+       "3  NORMAL SINUS RHYTHM NONSPECIFIC T WAVE ABNORMA...   \n",
+       "4  NORMAL SINUS RHYTHM LEFT AXIS DEVIATION ABNORM...   \n",
+       "\n",
+       "                                               label  \n",
+       "0  [0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "1  [0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, ...  \n",
+       "2  [0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "3  [1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...  \n",
+       "4  [1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "map_label = pd.read_csv('/home/ubuntu/data/map_label.csv')\n",
+    "sample = pd.read_csv('/home/ubuntu/data/combined_ecg_diagnosis.csv')\n",
+    "\n",
+    "def one_hot_encoding(row, labels):\n",
+    "    \"\"\"Return one-hot encoding for a given row based on the provided labels.\"\"\"\n",
+    "    if pd.isna(row):\n",
+    "        return [0] * len(labels)\n",
+    "    return [int(label in row) for label in labels]\n",
+    "\n",
+    "# Apply one-hot encoding for each row in sample['deid_t_diagnosis']\n",
+    "sample['label'] = sample['deid_t_diagnosis'].apply(lambda x: one_hot_encoding(x, map_label['Text']))\n",
+    "sample.to_csv('/home/ubuntu/data/ecg/ecg_label.csv', index=False)\n",
+    "# Display the first few rows of the modified sample DataFrame\n",
+    "sample.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     [0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "1     [0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, ...\n",
+       "2     [0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "3     [1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...\n",
+       "4     [1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...\n",
+       "5     [1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "6     [1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, ...\n",
+       "7     [1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "8     [0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "9     [0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "10    [0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "11    [0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "12    [0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "13    [1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "14    [0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "15    [1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, ...\n",
+       "16    [0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, ...\n",
+       "17    [0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, ...\n",
+       "18    [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, ...\n",
+       "19    [1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, ...\n",
+       "Name: label, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample['label'].head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -157,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
