--- a/test.ipynb
+++ b/test.ipynb
@@ -404,38 +404,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1189807/1195864096.py:15: DtypeWarning: Columns (2,3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  self.data = pd.read_csv(txt_path)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Using CUDA.\n",
-      "{'ecg': tensor([[-175., -175., -175.,  ..., -102.,  -82.,  -92.],\n",
-      "        [  -9.,   -9.,    4.,  ...,   78.,   82.,   78.],\n",
-      "        [ 165.,  165.,  180.,  ...,  180.,  165.,  170.],\n",
-      "        ...,\n",
-      "        [  78.,   78.,   92.,  ...,  129.,  124.,  124.],\n",
-      "        [-170., -170., -178.,  ..., -141., -124., -131.],\n",
-      "        [  92.,   92.,   85.,  ...,   12.,    0.,    7.]]), 'txt': 'SINUS TACHYCARDIA|SEPTAL INFARCT||ST &|ABNORMAL ECG|WHEN COMPARED WITH ECG OF||SEPTAL INFARCT|IS NOW|PRESENT|T WAVE INVERSION NO LONGER EVIDENT IN|ANTERIOR LEADS'}\n",
-      "<torch.utils.data.dataloader.DataLoader object at 0x7fddc174ec40> cuda:0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1189807/1195864096.py:15: DtypeWarning: Columns (2,3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  self.data = pd.read_csv(txt_path)\n"
+      "<torch.utils.data.dataloader.DataLoader object at 0x7fb3f0ce9220> cuda:0\n"
      ]
     }
    ],
@@ -515,8 +492,33 @@
     "        row = self.data.iloc[idx]\n",
     "        hash_file_name = row['HashFileName']\n",
     "        diagnosis = row['deid_t_diagnosis_original']\n",
-    "        hd5_file = h5py.File(f\"{self.ecg_path}/{hash_file_name}\", \"r\")\n",
-    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        s_dirs = [f\"S{i:04d}\" for i in range(1, 5)] # Assuming there are only 4 'S' directories, modify as needed\n",
+    "        year_dirs = [str(i) for i in range(1987, 2024)] # Assuming years range from 1980 to 2020\n",
+    "        month_dirs = [f\"{i:02}\" for i in range(1, 13)]\n",
+    "\n",
+    "        # Iterate over all possible combinations to find the file\n",
+    "        file_found = False\n",
+    "        for s_dir in s_dirs:\n",
+    "            for year_dir in year_dirs:\n",
+    "                for month_dir in month_dirs:\n",
+    "                    file_path = f\"{self.ecg_path}/{s_dir}/{year_dir}/{month_dir}/{hash_file_name}\"\n",
+    "                    if os.path.exists(file_path):\n",
+    "                        hd5_file = h5py.File(file_path, \"r\")\n",
+    "                        file_found = True\n",
+    "                        break\n",
+    "                if file_found:\n",
+    "                    break\n",
+    "            if file_found:\n",
+    "                break\n",
+    "        #hd5_file = h5py.File(f\"{self.ecg_path}/{hash_file_name}\", \"r\")\n",
+    "\n",
+    "        if not file_found:\n",
+    "            raise ValueError(f\"File {self.ecg_path}/{s_dir}/{year_dir}/{month_dir}/{hash_file_name} not found in the directory structure.\")\n",
+    "            print(idx)\n",
     "        # Load the corresponding hd5 file for ECG data\n",
     "        for k in list(hd5_file['ecg'].keys()):\n",
     "            ecg_data_list = [torch.tensor(hd5_file['ecg'][k][lead][:]) for lead in self.leads]\n",
@@ -528,7 +530,7 @@
     "        ecg_data = self.preprocess(ecg_data, sample_rate)\n",
     "        ecg_data = torch.tensor(ecg_data, dtype=torch.float)\n",
     "\n",
-    "        sample = {'ecg': ecg_data, 'txt': diagnosis }\n",
+    "        sample = {'ecg': ecg_data, 'txt': diagnosis,'file':file_path }\n",
     "        return sample\n",
     "\n",
     "def load_data(ecg_path, txt_path, batch_size=128, column='deid_t_diagnosis_original'): \n",
@@ -552,13 +554,86 @@
     "    return data_loader, device\n",
     "    \n",
     "# Testing the dataset with the provided files\n",
-    "cxr_filepath = '/home/ubuntu/data'\n",
-    "txt_filepath = '/home/ubuntu/data/sample.csv'\n",
+    "cxr_filepath = '/home/ubuntu/data/ecg'\n",
+    "txt_filepath = '/home/ubuntu/data/combined_ecg_diagnosis.csv'\n",
     "dataset = ECGDataset(txt_filepath, cxr_filepath)\n",
     "sample = dataset[0]\n",
     "ECGdataloader,dev = load_data(txt_path = txt_filepath, ecg_path = cxr_filepath)\n",
-    "print(sample)\n",
+    "#print(sample)\n",
     "print(ECGdataloader,dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ecg': tensor([[-102., -102., -102.,  ..., -117., -126., -126.],\n",
+       "         [ -92.,  -87.,  -97.,  ..., -136., -136., -136.],\n",
+       "         [   9.,   14.,    4.,  ...,  -19.,   -9.,   -9.],\n",
+       "         ...,\n",
+       "         [ -41.,  -36.,  -46.,  ...,  -78.,  -73.,  -73.],\n",
+       "         [ -56.,  -58.,  -53.,  ...,  -48.,  -58.,  -58.],\n",
+       "         [  97.,   95.,  100.,  ...,  126.,  131.,  131.]]),\n",
+       " 'txt': 'NORMAL SINUS RHYTHM NORMAL ECG WHEN COMPARED WITH ECG OF ',\n",
+       " 'file': '/home/ubuntu/data/ecg/S0003/2010/02/de_115828429_20111219012630_20111219114122.hd5'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 111888311,\n",
+       " 'de_111888311_20120607205223_20120608195341.hd5',\n",
+       " 'NORMAL SINUS RHYTHM|NORMAL ECG|WHEN COMPARED WITH ECG OF||NO SIGNIFICANT CHANGE WAS FOUND',\n",
+       " 'NORMAL SINUS RHYTHM NORMAL ECG WHEN COMPARED WITH ECG OF  NO SIGNIFICANT CHANGE WAS FOUND']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/home/ubuntu/data/combined_ecg_diagnosis.csv')\n",
+    "df.iloc[0].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10650681, 5)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
@@ -618,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
